# HTMLTableClener

./: CMakeLists.txt  Cell.h  DOCUMENTATION.md  DatabaseManager.cpp  DatabaseManager.h  README.md  Table.cpp  Table.h  TableParser.cpp  TableParser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
HTMLTableCleaner/: CMakeLists.txt  Cell.h  DOCUMENTATION.md  Table.cpp  Table.h  TableParser.cpp  TableParser.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
